test/functions/typeMethods/arg-type-type-method.good
arg-type-type-method.chpl:10: error: success
